# aibughunter

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.marketing  LICENSE  QUICKSTART.md  README.md  SAAS_README.md  fly.toml  pyproject.toml  run_tests.py
.github/workflows/: broker-final.yml  broker-probe.yml  broker-test.yml  cache-exploit.yml  cache-isolation.yml  cache-symlink2.yml  deep-probe.yml  deep-probe2.yml  env-probe.yml  grpc-test.yml  jwt-test.yml  proto-find.yml  runtime-probe.yml  symlink-test.yml  token-analyze.yml  token-probe.yml  token-probe2.yml  token-probe3.yml  token-probe4.yml  ws-broker.yml  ws-probe.yml  yaml-test.yml
aibughunter/: __init__.py  cli.py  sandbox.py
aibughunter/ai/: qwen_client.py
aibughunter/api/: __init__.py
aibughunter/commands/: config.py  kali.py  recon.py  report.py  scan.py  targets.py  tools.py  web.py
aibughunter/config/: __init__.py  manager.py
aibughunter/core/: dashboard.py  database.py  orchestrator.py  scope.py
aibughunter/scanners/: api_scanner.py  dork_finder.py  exploit_module.py  infra_scanner.py  mobile_scanner.py  recon_scanner.py  tech_scanner.py  web_scanner.py
aibughunter/web/: api.py  dashboard.html  marketing.py  saas_platform.py  serve_marketing.py
aibughunter/web/spa/: index.html  landing.css
aibughunter/web/templates/: checkout.html  index.html  payment_success.html  scan_request.html
examples/: __init__.py  api_usage.py  automated_hunt.py
tests/: __init__.py  conftest.py  test_config.py  test_dork_finder.py  test_qwen_client.py  test_reports.py  test_scope.py  test_tools.py
