[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aibughunter"
version = "0.1.0"
description = "AI-powered automated bug hunting platform with Qwen CLI integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AI Bug Hunter Team"}
]
keywords = ["security", "bug-bounty", "penetration-testing", "ai", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.9.0",
    "asyncio-mqtt>=0.16.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "python-nmap>=0.7.1",
    "shodan>=1.30.0",
    "colorama>=0.4.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "urllib3>=2.0.0",
    "dnspython>=2.4.0",
    "cryptography>=41.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]
mobile = [
    "frida>=16.0.0",
    "androguard>=3.4.0",
]

[project.scripts]
aibughunter = "aibughunter.cli:app"
aibh = "aibughunter.cli:app"

[tool.setuptools.packages.find]
include = ["aibughunter*"]

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
